--- a/bouton.html
+++ b/bouton.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div class="button-container">
-        <button>Button 1</button>
+        <button><a href="sous_categories.html">Button 1</a></button>
         <button>Button 2</button>
         <button>Button 3</button>
         <button>Button 4</button>
