--- a/sous_categories.html
+++ b/sous_categories.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <h1>Sous-catégories du Bouton 1</h1>
-    <ul>
-        <li>Sous-catégorie 1</li>
-        <li>Sous-catégorie 2</li>
-        <li>Sous-catégorie 3</li>
-    </ul>
+    <div class="button-container">
+        <button>Button 1</button>
+        <button>Button 2</button>
+        <button>Button 3</button>
+        <button>Button 4</button>
+        <button>Button 5</button>
+    </div>
 </body>
 </html>
