sous_categories.html

--- a/sous_categories.html
+++ b/sous_categories.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div class="button-container">
-        <button><a href="https://localhost/Templates.do?module=mergedRequest" target="_blank">Button 1</a></button>
+        <button><a href="https://localhost/Templates.do?module=mergedRequest" onclick="$slc.cardView(1)" target="_blank">Button 1</a></button>
         <button>Button 2</button>
         <button>Button 3</button>
         <button>Button 4</button>
